--- a/.github/workflows/Preview.yml
+++ b/.github/workflows/Preview.yml
@@ -1,16 +1,17 @@
 name: Deploy to Preview
 "on":
-  pull_request:
+  push:
     branches:
       - develop
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     environment: Preview - sadforms.com
-    if: github.repository == 'byjackli/sadforms'
+    if: '${{github.repository == byjackli/sadforms}}'
     steps:
-      - name: build
+      - name: checkout
         uses: actions/checkout@v2
+      - name: build
         run: npm ci && npm run build
       - name: deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
