--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,4 +21,5 @@ jobs:
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SADFORMS }}"
+          channelId: preview
           projectId: sadforms
